[gd_scene load_steps=9 format=3 uid="uid://dtbobx715w63f"]

[ext_resource type="Theme" uid="uid://delf0innikb3k" path="res://ui_themes/new_theme.tres" id="1_80olk"]
[ext_resource type="Script" path="res://code/ui_container.gd" id="1_d25tj"]
[ext_resource type="Script" path="res://code/ui.gd" id="3_nn576"]
[ext_resource type="Theme" uid="uid://i0emvkjb5k7u" path="res://ui_themes/skill_container.tres" id="4_7nkud"]
[ext_resource type="Script" path="res://code/score_text.gd" id="4_xul06"]
[ext_resource type="Script" path="res://code/Container.gd" id="6_imtj1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g46e3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7epcc"]
bg_color = Color(0.788235, 0.513726, 0.541176, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_d25tj")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 51.0
offset_top = 59.0
offset_right = 439.0
offset_bottom = 129.0
theme = ExtResource("1_80olk")
theme_override_colors/font_color = Color(0, 0.776161, 0.650599, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_g46e3")
theme_override_styles/fill = SubResource("StyleBoxFlat_7epcc")
value = 50.0
script = ExtResource("3_nn576")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 55.0
offset_top = 20.0
offset_right = 189.0
offset_bottom = 52.0
text = "Score: 0"
script = ExtResource("4_xul06")

[node name="TalentBox" type="ColorRect" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2494.0
offset_top = -1861.0
offset_right = 2493.0
offset_bottom = 1820.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_7nkud")
color = Color(0, 0, 0, 0.584314)
script = ExtResource("6_imtj1")

[node name="Talent1" type="Button" parent="TalentBox"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -166.0
offset_right = -102.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
text = "Attack Range"

[node name="Talent2" type="Button" parent="TalentBox"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -164.0
offset_right = 126.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
text = "Attack Speed"

[node name="Talent3" type="Button" parent="TalentBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 152.5
offset_top = -161.5
offset_right = 356.5
offset_bottom = 226.5
grow_horizontal = 2
grow_vertical = 2
text = "Base Damage"

[connection signal="pressed" from="TalentBox/Talent1" to="TalentBox" method="_on_talent_1_pressed"]
[connection signal="pressed" from="TalentBox/Talent2" to="TalentBox" method="_on_talent_2_pressed"]
[connection signal="pressed" from="TalentBox/Talent3" to="TalentBox" method="_on_talent_3_pressed"]
